--- a/1_Project.ipynb
+++ b/1_Project.ipynb
@@ -13,8 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " # Spatial-temporal differences in cloud cover of satellite observations across the Brazilian Amazon rainforest\n",
-    "Willian Vieira de Oliveira\n",
+    "<center> Spatial-temporal differences in cloud cover of satellite observations across the Brazilian Amazon rainforest </center>",
+    "\nWillian Vieira de Oliveira\n",
     "\n",
     "<div style=\"text-align: right\"> [ Part 1 - About the project and the data ] </div>"
    ]
